gitops/apps/targeting/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: targeting
  labels:
    application: targeting
