gitops/apps/targeting/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: targeting
  labels:
    app: targeting-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      containers:
        - name: targeting-service
          image: 742792279914.dkr.ecr.us-east-1.amazonaws.com/togglemaster-targeting:v1.0.0-fe204532b4d8d999b7ce82c7490226b2a5efaf2b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 15
            periodSeconds: 20
